# united-cinemas

./: Cargo.toml
client/src/: index.html  index.js  script.js  styles.css
src/: lib.rs  main.rs  prelude.rs  settings.rs  telemetry.rs
src/components/: broadcast_registry.rs  mod.rs  peer_conn_factory.rs  session_manager.rs  signaling_server.rs  track_manager.rs
src/signal/: Cargo.toml
