[package]
name = "united-cinemas"
version = "0.1.0"
authors = ["Kaucrow <kaucrow@protonmail.com>"]
edition = "2021"
description = "United Cinemas"
license = "MIT OR Apache-2.0"
repository = "https://github.com/webrtc-rs/webrtc/tree/master/examples"

[dependencies]
webrtc = "0.14.0"
tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.5.50", features = ["derive"] }
tracing-subscriber = { version = "0.3.20", features = ["time", "env-filter", "fmt", "std", "tracing-log", "chrono"] }
tracing-appender = "0.2.3"
tracing = "0.1.41"
base64 = "0.22.1"
actix-web = "4.11.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"
chrono = "0.4.42"
serde_json = "1.0.145"
anyhow = "1.0.100"
